--- a/contact.html
+++ b/contact.html
@@ -13,9 +13,9 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
-                <li><a href="Gallery.html">Car Portfolio</a></li>
-                <li><a href="advantages.html">Advantages</a></li>
-                <li><a href="map.html">Location</a></li>
+                <li><a href="Gallery.html">Car Gallery</a></li>
+                <li><a href="advantages.html">Benefits</a></li>
+                <li><a href="map.html">Map</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
@@ -24,7 +24,7 @@
     <section class="contact-form">
         <div class="container">
             <h2>Contact Us</h2>
-            <form action="#" method="post">
+            <form action="https://formsubmit.co/karimbenkhira.contact@gmail.com" method="POST">
                 <label for="name">Your Name:</label>
                 <input type="text" id="name" name="name" required>
                 
