--- a/Gallery2.html
+++ b/Gallery2.html
@@ -24,39 +24,33 @@
 
       <section class="gallery">
         <h2>Take A <span>Look</span></h2>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita
-          facilis placeat at doloremque velit fugit possimus, quasi, magni saepe
-          qui quas, nostrum fuga praesentium autem eius perspiciatis optio eaque
-          et?
-        </p>
         <div class="gallery-container container">
           <div class="gallery-item">
             <div class="gallery-overlay">
               <h3>Audi R8 <span>- The Limitless Car</span></h3>
             </div>
-            <img src="images/car3.jpg" alt="Car" />
+            <img src="images/gallery/car7.jpg" alt="Car" />
           </div>
           <div class="gallery-item">
             <div class="gallery-overlay">
               <h3>Audi R9 <span>- The Real Way</span></h3>
             </div>
-            <img src="images/car4.jpg" alt="Car" />
+            <img src="images/gallery/Freightliner_M2_106_6x4_2014_(14240376744).jpg" alt="Car" />
           </div>
           <div class="gallery-item">
             <div class="gallery-overlay">
               <h3>Audi R11 <span>- A Car!</span></h3>
             </div>
-            <img src="images/car5.jpg" alt="Car" />
+            <img src="images/gallery/home_heo (1).jpg" alt="Car" />
           </div>
           <div class="gallery-item">
             <div class="gallery-overlay">
               <h3>Audi R7 <span>- Ultimate Experience</span></h3>
             </div>
-            <img src="images/car6.jpg" alt="Car" />
+            <img src="images/gallery/IMG_2343-resized.jpg" alt="Car" />
           </div>
         </div>
-        <a class="btn" href="Gallery1.html">View Gallery</a>
+        <a class="btn" href="Gallery3.html">View Gallery</a>
       </section>
 
       <footer class="container">
