--- a/Gallery3.html
+++ b/Gallery3.html
@@ -24,39 +24,33 @@
 
       <section class="gallery">
         <h2>Take A <span>Look</span></h2>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita
-          facilis placeat at doloremque velit fugit possimus, quasi, magni saepe
-          qui quas, nostrum fuga praesentium autem eius perspiciatis optio eaque
-          et?
-        </p>
         <div class="gallery-container container">
           <div class="gallery-item">
             <div class="gallery-overlay">
               <h3>Audi R8 <span>- The Limitless Car</span></h3>
             </div>
-            <img src="images/car3.jpg" alt="Car" />
+            <img src="images/gallery/index_key_002_sp.jpg" alt="Car" />
           </div>
           <div class="gallery-item">
             <div class="gallery-overlay">
               <h3>Audi R9 <span>- The Real Way</span></h3>
             </div>
-            <img src="images/car4.jpg" alt="Car" />
+            <img src="images/gallery/mini_3dr_anniversary_edition.jpg" alt="Car" />
           </div>
           <div class="gallery-item">
             <div class="gallery-overlay">
               <h3>Audi R11 <span>- A Car!</span></h3>
             </div>
-            <img src="images/car5.jpg" alt="Car" />
+            <img src="images/gallery/New-Chevrolet-Sonic-2017-1.jpg" alt="Car" />
           </div>
           <div class="gallery-item">
             <div class="gallery-overlay">
               <h3>Audi R7 <span>- Ultimate Experience</span></h3>
             </div>
-            <img src="images/car6.jpg" alt="Car" />
+            <img src="images/gallery/nissan-micra-4-star-car_0.jpg" alt="Car" />
           </div>
         </div>
-        <a class="btn" href="Gallery1.html">View Gallery</a>
+        <!--<a class="btn" href="gallery.html">View Gallery</a>-->
       </section>
 
       <footer class="container">
