--- a/index.html
+++ b/index.html
@@ -47,7 +47,142 @@
         </div>
       </div>
     </section>
+    <section class="about">
+      <div>
+        <img src="images/car1.jpg" alt="" />
+      </div>
+      <div class="container">
+        <h2>Why Gocar <span>?</span></h2>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo deserunt
+          fugiat corporis velit harum vel error animi quam necessitatibus
+          voluptatibus veritatis provident ut, esse labore dolor adipisci
+          debitis et consequuntur! Quidem nostrum saepe explicabo natus facilis
+          rerum eligendi ullam magni praesentium ab tempore voluptate sint,
+          veritatis laudantium repellat quam labore perspiciatis odio et,
+          deleniti porro! Magni explicabo quidem quia iure!
+        </p>
+        <a href="#" class="btn">read more</a>
+      </div>
+    </section>
+    <section class="adv">
+      <h2>Advantages</h2>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita
+        facilis placeat at doloremque velit fugit possimus, quasi, magni saepe
+        qui quas, nostrum fuga praesentium autem eius perspiciatis optio eaque
+        et?
+      </p>
 
+      <div>
+        <div class="icon-container container">
+          <div>
+            <img src="images/icons/001-eye.svg" alt="eye icon" />
+            <div>
+              <h5>Safety</h5>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+          </div>
+          <div>
+            <img src="images/icons/002-upstairs.svg" alt="upstairs icon" />
+            <div>
+              <h5>Productivity</h5>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            </div>
+          </div>
+          <div>
+            <img src="images/icons/003-pie-chart.svg" alt="chart icon" />
+            <div>
+              <h5>Statistic</h5>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+          </div>
+          <div>
+            <img src="images/icons/004-money.svg" alt="money icon" />
+            <div>
+              <h5>Cheap</h5>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="about2">
+      <div>
+        <img src="images/car2.jpg" alt="" />
+      </div>
+      <div class="container">
+        <h2>Because You Deserve <span>It</span></h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae magnam
+          perferendis aperiam, quis autem obcaecati sit quasi vitae at commodi
+          sed ducimus nobis laborum labore accusamus optio architecto voluptates
+          incidunt. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+          Quo deserunt fugiat corporis velit harum vel error animi quam
+          necessitatibus voluptatibus veritatis provident ut, esse labore dolor
+          adipisci debitis et consequuntur! Quidem nostrum saepe explicabo natus
+          facilis rerum eligendi ullam magni praesentium ab tempore voluptate
+          sint, veritatis laudantium repellat quam labore perspiciatis odio et,
+          deleniti porro! Magni explicabo quidem quia iure!
+        </p>
+        <a href="#" class="btn">read more</a>
+      </div>
+    </section>
+    <section class="gallery">
+      <h2>Take A <span>Look</span></h2>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita
+        facilis placeat at doloremque velit fugit possimus, quasi, magni saepe
+        qui quas, nostrum fuga praesentium autem eius perspiciatis optio eaque
+        et?
+      </p>
+      <div class="gallery-container container">
+        <div class="gallery-item">
+          <div class="gallery-overlay">
+            <h3>Audi R8 <span>- The Limitless Car</span></h3>
+          </div>
+          <img src="images/car3.jpg" alt="Car" />
+        </div>
+        <div class="gallery-item">
+          <div class="gallery-overlay">
+            <h3>Audi R9 <span>- The Real Way</span></h3>
+          </div>
+          <img src="images/car4.jpg" alt="Car" />
+        </div>
+        <div class="gallery-item">
+          <div class="gallery-overlay">
+            <h3>Audi R11 <span>- A Car!</span></h3>
+          </div>
+          <img src="images/car5.jpg" alt="Car" />
+        </div>
+        <div class="gallery-item">
+          <div class="gallery-overlay">
+            <h3>Audi R7 <span>- Ultimate Experience</span></h3>
+          </div>
+          <img src="images/car6.jpg" alt="Car" />
+        </div>
+      </div>
+      <a class="btn" href="Gallery1.html">View Gallery</a>
+    </section>
+    <section class="map">
+      <h2>Where To Find <span>Us</span></h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, iusto!
+        Ad quos vitae maxime consequuntur pariatur. Porro id hic voluptas
+        pariatur odio dignissimos minima vero veritatis cum tempore. Molestiae,
+        pariatur.
+      </p>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3261.374689306456!2d-2.936093823421452!3d35.17221267275588!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd77a7f64b5746df%3A0xe238780f83e6f56d!2sYoucode!5e0!3m2!1sen!2sma!4v1728479659780!5m2!1sen!2sma"
+        width="600"
+        height="450"
+        frameborder="0"
+        style="border: 0"
+        allowfullscreen=""
+        aria-hidden="false"
+        tabindex="0"
+      ></iframe>
+    </section>
     <footer class="container">
       <div class="footer-inner">
         <div>
@@ -81,8 +216,7 @@
           </ul>
         </div>
       </div>
-      <p>All Rights Reserveed - GoCar 2020</p>
+      <p>All Rights Reserveed - GoCar 2024</p>
     </footer>
-
   </body>
 </html>
